<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright 2021 Google LLC

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    https://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:importantForAutofill="no"
    tools:context=".SoundEventsFragment">

    <TextView
        android:id="@+id/sound_event_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/sound_events_description"
        android:textSize="@dimen/large_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/sound_events_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="?colorSecondary"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/widget_large_vertical_spacing"
        android:text="@string/sound_events_enable"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sound_event_description" />

    <TextView
      android:id="@+id/sound_header"
      android:layout_width="@dimen/sound_events_header_width"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/activity_horizontal_margin"
      android:text="@string/sound_events_heading"
      android:textAlignment="textStart"
      android:textSize="@dimen/large_text_size"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/sound_events_switch" />

    <TextView
      android:id="@+id/pattern_header"
      android:layout_width="@dimen/tactile_pattern_header_width"
      android:layout_height="wrap_content"
      android:text="@string/pattern_header_text"
      android:textAlignment="textStart"
      android:layout_marginStart="@dimen/tactile_pattern_header_margin_left"
      android:textSize="@dimen/large_text_size"
      app:layout_constraintStart_toEndOf="@+id/sound_header"
      app:layout_constraintTop_toBottomOf="@+id/sound_events_switch" />


    <View
        android:id="@+id/heading_divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sound_header" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/sound_events_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingTop="@dimen/list_top_padding"
        android:scrollbars="vertical"
        app:layoutManager="LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heading_divider" />

</androidx.constraintlayout.widget.ConstraintLayout>
