<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright 2021 Google LLC

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    https://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/channel_map_dialog_height"
    tools:context=".ChannelMapDialogFragment">

    <TextView
        android:id="@+id/channel_map_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:textSize="@dimen/large_text_size"
        app:layout_constraintTop_toTopOf="@+id/channel_map_reset"
        app:layout_constraintBottom_toBottomOf="@+id/channel_map_reset"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Tactor 99" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/channel_map_enable_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/widget_large_horizontal_spacing"
        android:text="@string/channel_map_enable_label"
        app:layout_constraintTop_toTopOf="@+id/channel_map_reset"
        app:layout_constraintBottom_toBottomOf="@+id/channel_map_reset"
        app:layout_constraintEnd_toStartOf="@+id/channel_map_reset" />

    <Button
        android:id="@+id/channel_map_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:backgroundTint="?colorSecondary"
        android:text="@string/reset_button_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/channel_map_source_icon"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_weight="1"
        app:layout_constraintBottom_toBottomOf="@+id/channel_map_source_field"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/channel_map_source_field"
        app:srcCompat="@drawable/ic_channel_map_source"
        app:tint="?colorPrimary" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/channel_map_source_field"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="@dimen/channel_map_source_field_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/widget_horizontal_spacing"
        android:layout_marginTop="@dimen/widget_vertical_spacing"
        android:hint="@string/channel_map_source_label"
        app:layout_constraintStart_toEndOf="@+id/channel_map_source_icon"
        app:layout_constraintTop_toBottomOf="@+id/channel_map_reset">

        <AutoCompleteTextView
            android:id="@+id/channel_map_source_dropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/channel_map_reset" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/channel_map_gain_icon"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/widget_vertical_spacing"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/channel_map_source_field"
        app:srcCompat="@drawable/ic_volume"
        app:tint="?colorPrimary" />

    <TextView
        android:id="@+id/channel_map_gain_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/widget_horizontal_spacing"
        android:text="@string/channel_map_gain_label"
        app:layout_constraintBottom_toBottomOf="@+id/channel_map_gain_icon"
        app:layout_constraintStart_toEndOf="@+id/channel_map_gain_icon"
        app:layout_constraintTop_toTopOf="@+id/channel_map_gain_icon" />

    <TextView
        android:id="@+id/channel_map_gain_value"
        android:layout_width="@dimen/channel_map_gain_value_width"
        android:layout_height="wrap_content"
        android:textAlignment="textEnd"
        app:layout_constraintStart_toEndOf="@+id/channel_map_gain_label"
        app:layout_constraintTop_toTopOf="@+id/channel_map_gain_label"
        tools:text="123.4 dB" />

    <com.google.android.material.slider.Slider
        android:id="@+id/channel_map_gain_slider"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/widget_small_horizontal_spacing"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:valueFrom="@dimen/channel_gain_control_value_min"
        android:valueTo="@dimen/channel_gain_control_value_max"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/channel_map_gain_icon"
        app:layout_constraintTop_toBottomOf="@+id/channel_map_gain_icon" />

    <TextView
        android:id="@+id/channel_map_dialog_description"
        android:layout_width="0dp"
        android:layout_height="@dimen/channel_map_dialog_description_height"
        android:layout_marginTop="@dimen/widget_vertical_spacing"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/channel_map_gain_slider" />

</androidx.constraintlayout.widget.ConstraintLayout>
